# i2c_puppet

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  keymap.md
.github/workflows/: build.yml
app/: keyboard.c  keyboard.h  touchpad.c  usb.c
etc/: i2c_puppet.py
